manifests/tools/manifests/minio/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute
spec:
  hostnames:
  - s3.matoru.ru
  parentRefs:
  - name: common
    namespace: kube-system
  rules:
  - backendRefs:
    - name: minio
      port: 9001
    matches:
    - path:
        type: PathPrefix
        value: /
